연결이 진짜 됐다 이제 메세지 보내는 것만 하면 됨